--- a/index.html
+++ b/index.html
@@ -7,6 +7,55 @@
     <title>html-london-trip</title>
 </head>
 <body>
-    
+
+    <!-- IMMAGINI DI PRESENTAZIONE -->
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+        <hr>
+    </header>
+
+    <main>
+
+        <!-- TABELLA SPESE -->
+        <h2>Le mie spese</h2>
+
+        <table>
+
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+
+            <tr>
+                <td colspan="2">Totale</td>
+                <td>360€</td>
+            </tr>
+        </table>
+        
+        <hr>
+
+    </main>
 </body>
 </html>
